scrollbar bug fix.

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   margin: 0;
   padding: 0;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
 /* setting viewport height */
 html,
 body {
